[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "scanpy-tutorials"
authors = [
  { name = "Alex Wolf" },
  { name = "Fidel Ramirez" },
  { name = "Sergei Rybakov" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "myst-nb",
  "scanpydoc[theme]>=0.13.4",
  "sphinx",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
bypass-selection = true # This is not a package

[tool.hatch.envs.default]
python = "3.13"
installer = "uv"
[tool.hatch.envs.default.scripts]
build = "sphinx-build -M html . ./_build {args}"
clean = "git clean -fdX _build"

[tool.hatch.envs.notebook]
scripts.install-kernel = "python -m ipykernel install --user --name=scanpy-tutorials --display-name=\"Scanpy Tutorials\""
extra-dependencies = [
  "ipykernel",
  "ipywidgets",
  "scanpy[skmisc,leiden]",
]

[tool.ruff]
extend-exclude = [ "scanpy_workshop/" ]
lint.ignore = [
  "E741", # Fonts these days don’t display I and l in a confusable way
  "F821", # R cells can sometimes define variables
]
